[gd_scene load_steps=8 format=3 uid="uid://dmdiirbl74khg"]

[ext_resource type="Script" path="res://Scripts/view/MainMenu.gd" id="1_vltaf"]
[ext_resource type="Texture2D" uid="uid://bhy41e5xhx6dx" path="res://storyboards/MainMenu2.png" id="2_yik4x"]
[ext_resource type="LabelSettings" uid="uid://c4bend8ts087h" path="res://TextSettings/HeaderSettings.tres" id="3_oyj13"]
[ext_resource type="AudioStream" uid="uid://vue1dh44yi00" path="res://Audio/MindThatGap.wav" id="4_ty4k6"]
[ext_resource type="AudioStream" uid="uid://dm80nclnqlwbo" path="res://Audio/Button1.wav" id="5_cd2c3"]
[ext_resource type="AudioStream" uid="uid://dmtk7kiqivgjs" path="res://Audio/Button2.wav" id="6_82kbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xdgm"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vltaf")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 440.0
offset_bottom = 956.0
color = Color(0.992157, 0.854902, 0.160784, 1)

[node name="ref" type="TextureRect" parent="."]
visible = false
light_mask = 3
visibility_layer = 3
layout_mode = 0
offset_right = 440.0
offset_bottom = 956.0
texture = ExtResource("2_yik4x")
expand_mode = 1
stretch_mode = 4

[node name="MainMenuHeader" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 192.0
offset_right = 416.0
offset_bottom = 432.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1xdgm")

[node name="MarginContainer" type="MarginContainer" parent="MainMenuHeader"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="HeaderText" type="Label" parent="MainMenuHeader/MarginContainer"]
layout_mode = 2
text = "أتوبيــس
كومبليت"
label_settings = ExtResource("3_oyj13")
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 2
language = "ar"

[node name="CreateButton" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 524.0
offset_right = 416.0
offset_bottom = 632.0
text = "إبتدي جيم"
text_direction = 2

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 656.0
offset_right = 416.0
offset_bottom = 764.0
text = "خش جيم"
text_direction = 2

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ty4k6")
volume_db = -10.0

[node name="HitButton1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cd2c3")

[node name="HitButton2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_82kbt")

[connection signal="pressed" from="CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
